background animation with vanilla js on canvas

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /* Add CSS Here */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#canvas1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  z-index: -50;
+}
